--- a/src/pages/userPage/Approvers/Approvers.less
+++ b/src/pages/userPage/Approvers/Approvers.less
@@ -21,7 +21,7 @@
   max-width: 750px;
   min-height: 750px;
   width: 750px;
-  height: 750px;
+  height: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
