Made avatar sticky and add new links logic

--- a/src/pages/userPage/Approvers/Approvers.less
+++ b/src/pages/userPage/Approvers/Approvers.less
@@ -16,6 +16,13 @@
   box-shadow: 0 7px 14px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   padding: 20px;
 }
+
+.kadraWrapper{
+  height: 100%;
+  width: 100%;
+  text-align: center;
+}
+
 .approversContent {
   min-width: 600px;
   max-width: 750px;
@@ -28,49 +35,62 @@
   justify-content: center;
   box-shadow: 0 7px 14px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   padding: 20px;
+  margin-bottom: 20px;
 }
+
 .approversCard {
   display: flex;
   justify-content: center;
   align-items: flex-end;
 }
+
 .cardStyles {
   margin: 15px;
   width: 177px;
   background: transparent;
 }
+
 .cardBody {
   padding: 0;
 }
+
 .cardButton {
   inline-size: -webkit-fill-available;
   margin-top: 7px;
   color: #3c5438;
   border-color: #3c5438;
 }
+
 .cardP {
   height: 25px;
 }
+
 .titleText {
   text-align: center;
   font-size: 20px;
   font-weight: 700;
 }
+
 .titleText:hover {
   text-decoration: underline;
 }
+
 .avatar {
   height: 168px;
 }
+
 .avatarEmpty {
   margin: 0 0 20px 0;
 }
+
 .avatarEmpty:hover {
   box-shadow: 0 7px 14px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
+
 .approversContent:hover {
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
+
 .line {
   background: #3c5438;
   width: 100%;
