--- a/src/pages/userPage/Secretaries/Secretaries.less
+++ b/src/pages/userPage/Secretaries/Secretaries.less
@@ -10,6 +10,12 @@
     transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
 }
 
+.kadraWrapper{
+    height: 100%;
+    width: 100%;
+    text-align: center;
+}
+
 .container{
     width: 100%;
 }
@@ -50,4 +56,4 @@
     .mainContainer{
         padding: 10px;
     }
- }
+}
