--- a/src/pages/userPage/personalData/PersonalData.less
+++ b/src/pages/userPage/personalData/PersonalData.less
@@ -39,7 +39,7 @@
 }
 
 .avatarWrapper{
-    width:  calc(60% - 30px) !important;
+    width: calc(60% - 30px) !important;
     height: auto;
     display: flex;
     flex-direction: column;
@@ -48,15 +48,17 @@
     margin:0 40px 20px 0;
     box-shadow: 0 7px 14px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
+    min-height: 300px !important;
 }
 
 .kadraWrapper{
-
+    height: 100%;
+    width: 100%;
     text-align: center;
 }
 
 .allFields{
-    width:  calc(60% - 30px);
+    width: calc(60% - 30px);
     height: auto;
     display: flex;
     flex-direction: column;
@@ -118,6 +120,10 @@
         padding-bottom: 5px;
         margin: auto !important;
     }
+    .kadraWrapper{
+        height: auto !important; 
+        margin-bottom: 0px !important;  
+    }
     .allFields{
         width: 750px;
         padding: 5px;
@@ -162,7 +168,7 @@
     }
  }
 @media(max-width: 768px){
-   .avatarWrapper{
+    .avatarWrapper{
        width: 100% !important;
        padding-top:5px;
        padding-bottom: 5px;
@@ -192,11 +198,10 @@
     font-size: 18px;
 }
 
-@media(max-width: 390px){
+@media(max-width: 450px){
     .img{
         width: 220px;
-        height: 220px;
-        
+        height: 220px;       
     }
 }
 
