--- a/src/pages/userPage/Approvers/Approvers.less
+++ b/src/pages/userPage/Approvers/Approvers.less
@@ -6,9 +6,9 @@
 .avatarWrapper {
   min-width: 600px;
   max-width: 750px;
-  min-height: 750px;
-  width: 750px;
-  height: 750px;
+  min-height: 550px;
+  width: auto;
+  height: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -26,13 +26,13 @@
 .approversContent {
   min-width: 600px;
   max-width: 750px;
-  min-height: 750px;
-  width: 750px;
+  min-height: 550px;
+  width: auto;
   height: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: top;
   box-shadow: 0 7px 14px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   padding: 20px;
   margin-bottom: 20px;
