--- a/src/pages/UserTable/UserTable.module.css
+++ b/src/pages/UserTable/UserTable.module.css
@@ -4,13 +4,41 @@
 }
 .searchContainer {
   margin-bottom: 12px;
-  width: 300px;
-  margin-left: auto; 
+  display: flex;
 }
 .searchContainer>input{
   width: 300px;
-  margin-left: auto; 
 }
+.searchArea{
+    width: 300px;
+    margin-left: auto; 
+}
+.filterContainer{
+  width: 400px;
+}
+/*.treeSelect{
+    position: relative;
+   /* display: flex;
+    flex: 1 1;
+    overflow:auto;
+    white-space: pre;
+    text-overflow: ellipsis;
+    /* flex: none; 
+   box-sizing: border-box;
+    height: 24px;
+    margin-top: 2px;
+    margin-right: 4px;
+    margin-bottom: 2px;
+    padding: 0 4px 0 8px;
+    line-height: 22px;
+    background: #f5f5f5;
+    border: 1px solid #f0f0f0;
+    border-radius: 2px;
+    cursor: default;
+    transition: font-size 0.3s, line-height 0.3s, height 0.3s;
+    -webkit-user-select: none;
+    user-select: none;
+}*/
 
 @media (max-width: 767px) {
   .table {
@@ -18,5 +46,14 @@
   }
   .searchContainer{
     width: 100%;
+    display: block;
+  }
+  .searchArea{
+    width: 90%;
+    margin: auto;
+  }
+  .filterContainer{
+    width: 90%;
+    margin: auto;
   }
 }
