fixed data input

--- a/src/pages/userPage/EditUserPage/EditUserPage.module.css
+++ b/src/pages/userPage/EditUserPage/EditUserPage.module.css
@@ -66,7 +66,7 @@
 
 .dataInput{
     border: 0 !important;
-    padding: 5px 0 5px 11px;
+    padding: 5px 11px;
     font-size: 17px;
     box-shadow: 0 0 0 !important;
     background-color: white;
