fixed StatisticsCities page

--- a/src/pages/Statistics/StatisticsCities.less
+++ b/src/pages/Statistics/StatisticsCities.less
@@ -9,6 +9,20 @@
   margin-right: auto;
   padding: 20px 20px 20px 20px;
 }
+
+.ant-select-item.ant-select-item-option.ant-select-item-option-active {
+  background-color: #8e948b;
+}
+.ant-select-tree .ant-select-tree-treenode-active .ant-select-tree-node-content-wrapper{
+  background-color: #81877f;
+}
+.ant-select-tree .ant-select-tree-treenode:hover .ant-select-tree-node-content-wrapper{
+  background-color: #81877f;
+}
+.ant-select-tree .ant-select-tree-treenode-disabled:hover .ant-select-tree-node-content-wrapper{
+  background-color: transparent;
+}
+
 .form {
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
   min-width: 600px;
