fixed StatisticsRegions page

--- a/src/pages/Statistics/StatisticsRegions.less
+++ b/src/pages/Statistics/StatisticsRegions.less
@@ -8,6 +8,19 @@
     border-bottom: 1px solid #dee2e6;
 }
 
+.ant-select-item.ant-select-item-option.ant-select-item-option-active {
+  background-color: #8e948b;
+}
+.ant-select-tree .ant-select-tree-treenode-active .ant-select-tree-node-content-wrapper{
+  background-color: #81877f;
+}
+.ant-select-tree .ant-select-tree-treenode:hover .ant-select-tree-node-content-wrapper{
+  background-color: #81877f;
+}
+.ant-select-tree .ant-select-tree-treenode-disabled:hover .ant-select-tree-node-content-wrapper{
+  background-color: transparent;
+}
+
 .formGlobal {
   margin-left: auto;
   margin-right: auto;
