fixed password input background

--- a/src/pages/SignIn/SignIn.module.css
+++ b/src/pages/SignIn/SignIn.module.css
@@ -22,6 +22,10 @@
     text-align: left;
 }
 
+input[type='password']{
+    background: #f7f9fc !important;
+}
+
 #confirmButton{
     border: 0;
     color: white;
