--- a/src/pages/AnnualReport/AnnualReportTable/AnnualReportTable.less
+++ b/src/pages/AnnualReport/AnnualReportTable/AnnualReportTable.less
@@ -25,7 +25,7 @@
 .AuthReport button{
     border: none;
     background: none;
-    color: #ffbb33;
+    color: #3c5438;
     cursor: pointer;
 }
 
