--- a/src/pages/AnnualReport/ClubAnnualReportEdit/ClubAnnualReportEdit.less
+++ b/src/pages/AnnualReport/ClubAnnualReportEdit/ClubAnnualReportEdit.less
@@ -5,3 +5,12 @@
     box-shadow: 0px 4px 4px rgba(3, 80, 0, 0.65);
     padding: 1%;
 }
+
+.clubButtons {
+    text-align: center;
+
+    .ant-btn-primary {
+      width: 65%;
+      margin: 5px;
+    }
+  }
