Added ability to mention users in decisions

--- a/src/App.less
+++ b/src/App.less
@@ -26,6 +26,10 @@
   margin: 10px 0 0;
 }
 
+.ant-mentions-dropdown-menu-item-active {
+    background-color: #81877f;
+}
+
 .ant-layout-sider {
   &.ant-layout-sider-collapsed  {
     box-shadow: none;
