Fixed accesses to decisions, updated precautions

--- a/src/App.less
+++ b/src/App.less
@@ -26,6 +26,10 @@
   margin: 10px 0 0;
 }
 
+.ant-select-item.ant-select-item-option.ant-select-item-option-active{
+    background-color: #81877f !important;
+}
+
 .ant-mentions-dropdown-menu-item-active {
     background-color: #81877f;
 }
