--- a/src/pages/Regions/AddDocumentModal.less
+++ b/src/pages/Regions/AddDocumentModal.less
@@ -20,6 +20,11 @@
   .cardButton {
     margin-bottom: 1.2rem;
   }
+
+  .buttons {
+    margin-left: 7px;
+    margin-right: 0px;
+  }
 }
 
 @media (max-width: 575px) {
