--- a/src/pages/userPage/personalData/PersonalData.less
+++ b/src/pages/userPage/personalData/PersonalData.less
@@ -331,3 +331,13 @@
 .links img:hover{
     transform: scale(1.3);
 }
+
+.LinkText {
+    text-align: center;
+    font-size: 20px;
+    font-weight: 400;
+}
+  
+.LinkText:hover {
+    text-decoration: underline;
+  }
