--- a/src/pages/Regions/AddRegionSecretaryForm.less
+++ b/src/pages/Regions/AddRegionSecretaryForm.less
@@ -1,11 +1,27 @@
 .ant-select {
   max-width: 310px;
 }
-.ant-picker {
-  width: 310px;
-}
 
 .formItemExplain {
-  width: 310px;
+  max-width: 310px;
+  width: 100%;
   float: right;
+}
+
+.ant-picker {
+  max-width: 310px;
+}
+
+@media (max-width: 575px) {
+  .ant-select {
+    max-width: 100%;
+  }
+
+  .formItemExplain {
+    max-width: 100%;
+  }
+
+  .ant-picker {
+    max-width: 100%;
+  }
 }
