--- a/src/pages/Club/AddAdministratorModal/AddClubsSecretaryForm.less
+++ b/src/pages/Club/AddAdministratorModal/AddClubsSecretaryForm.less
@@ -1,27 +1,29 @@
-.ant-select {
-  max-width: 310px;
-}
-
-.formItemExplain {
-  max-width: 310px;
-  width: 100%;
-  float: right;
-}
-
-.ant-picker {
-  max-width: 310px;
-}
-
-@media (max-width: 575px) {
+.formAddSecretaryModal {
   .ant-select {
-    max-width: 100%;
+    max-width: 310px;
   }
-
+  
   .formItemExplain {
-    max-width: 100%;
+    max-width: 310px;
+    width: 100%;
+    float: right;
   }
-
+  
   .ant-picker {
-    max-width: 100%;
+    max-width: 310px;
+  }
+  
+  @media (max-width: 575px) {
+    .ant-select {
+      max-width: 100%;
+    }
+  
+    .formItemExplain {
+      max-width: 100%;
+    }
+  
+    .ant-picker {
+      max-width: 100%;
+    }
   }
 }
