--- a/src/pages/AnnualReport/RegionAnnualReportForm/RegionAnnualReportForm.less
+++ b/src/pages/AnnualReport/RegionAnnualReportForm/RegionAnnualReportForm.less
@@ -3,3 +3,15 @@
         width: 100%;
     }
 }
+
+.report-unconfirmed-row{
+    background-color: rgba(255, 235, 59, 0.2);
+}
+
+.report-notFound-row{
+    background-color: rgba(244, 67, 54, 0.2);
+}
+
+.report-confirmed-row{
+    background-color: rgba(76, 175, 80, 0.1);
+}
