changed club annual report create and info page + navigation

--- a/src/pages/AnnualReport/ClubAnnualReportCreate/ClubAnnualReportCreate.less
+++ b/src/pages/AnnualReport/ClubAnnualReportCreate/ClubAnnualReportCreate.less
@@ -6,6 +6,16 @@
     padding: 1%;
 }
 
+.annualreport-modal {
+  .textCenter {
+      text-align: center;
+  }
+  
+  .container {
+      width: 100%;
+  }
+}
+
 .clubButtons {
     text-align: center;
 
