--- a/src/pages/GoverningBody/GoverningBody/GoverningBody.less
+++ b/src/pages/GoverningBody/GoverningBody/GoverningBody.less
@@ -6,12 +6,16 @@ h4.ant-typography {
 }
 
 .governingBodyProfile {
+    .governingBodyRow {
+        justify-content: space-between;
+    }
     .ant-card-body {
         padding-top: 10px;
         height: 100%;
         position: relative;
         display: flex;
         flex-direction: column;
+        justify-content: space-between;    
     }
 
     .governingBodyCard {
@@ -136,29 +140,6 @@ h4.ant-typography {
                 .approveIcon :hover {
                     color: #536150;
                     font-size: 28px;
-                }
-            }
-
-            .governingBodyMemberItem :hover {
-                text-decoration: underline;
-            }
-
-            .userName {
-                overflow: hidden;
-                text-overflow: ellipsis;
-                display: -webkit-box;
-                -webkit-line-clamp: 1;
-                -webkit-box-orient: vertical;
-                margin: 0px;
-            }
-        }
-        .governingBodyItems1 {
-            margin: auto !important;
-            .governingBodyMemberItem {
-                cursor: pointer;
-
-                .addFollower {
-                    color: #3c5438;
                 }
             }
 
