filtered options in selectModal

--- a/src/pages/AnnualReport/RegionAnnualReportForm/RegionAnnualReportForm.less
+++ b/src/pages/AnnualReport/RegionAnnualReportForm/RegionAnnualReportForm.less
@@ -13,5 +13,38 @@
 }
 
 .report-confirmed-row{
-    background-color: rgba(76, 175, 80, 0.1);
+    background-color: rgba(76, 175, 80, 0.2);
+}
+
+.region-members-table-info-icon{
+    font-size:30px; 
+    color: #3c5438; 
+    margin-left:30px;
+    margin-top: -55px;
+}
+
+
+
+.region-members-table-info{
+    border-left: 4px double black;
+    margin-left: 30px;
+    margin-top: -5px;
+}
+
+.region-members-table-info-confirmed{
+    padding: 5px;
+    padding-left: 15px;
+    background: linear-gradient(0.45turn, #4caf5033 10%, #4caf501a 40%,transparent 80%);
+}
+
+.region-members-table-info-unconfirmed{
+    padding: 5px;
+    padding-left: 15px;
+    background: linear-gradient(0.45turn, #ffeb3b33 10%, #ffeb3b1a 40%, transparent 80%);
+}
+
+.region-members-table-info-notfound{
+    padding: 5px;
+    padding-left: 15px;
+    background: linear-gradient(0.45turn, #f4433633 10%, #f443361a 40%, transparent 80%);
 }
