--- a/src/pages/ChangePassword/ChangePassword.module.css
+++ b/src/pages/ChangePassword/ChangePassword.module.css
@@ -50,7 +50,8 @@
     width:100%;
     height:40px;
     margin-bottom: 20px;
-    text-align: center;    
+    text-align: center;
+    padding: 5px;  
 }
 
 @media(max-width: 700px){
