Removed (hidden) link on Documents section #1329

--- a/src/pages/Club/Club/Club.less
+++ b/src/pages/Club/Club/Club.less
@@ -112,19 +112,7 @@ h4.ant-typography {
                 .addFollower {
                     color: #3c5438;
                 }
-
-                .documentIcon {
-                    font-size: 60px;
-                }
-
-                .documentText {
-                    overflow: hidden;
-                    text-overflow: ellipsis;
-                    display: -webkit-box;
-                    -webkit-line-clamp: 3;
-                    -webkit-box-orient: vertical;
-                }
-
+                
                 .approveIcon {
                     color: #3c5438;
                     position: absolute;
@@ -141,6 +129,22 @@ h4.ant-typography {
 
             .clubMemberItem :hover {
                 text-decoration: underline;
+            }
+
+            .clubDocumentItem {
+                cursor: pointer;
+
+                .documentIcon {
+                    font-size: 60px;
+                }
+
+                .documentText {
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                    display: -webkit-box;
+                    -webkit-line-clamp: 3;
+                    -webkit-box-orient: vertical;
+                }
             }
 
             .userName {
