--- a/src/pages/City/City/City.less
+++ b/src/pages/City/City/City.less
@@ -113,18 +113,6 @@ h4.ant-typography {
                     color: #3c5438;
                 }
 
-                .documentIcon {
-                    font-size: 60px;
-                }
-
-                .documentText {
-                    overflow: hidden;
-                    text-overflow: ellipsis;
-                    display: -webkit-box;
-                    -webkit-line-clamp: 3;
-                    -webkit-box-orient: vertical;
-                }
-
                 .approveIcon {
                     color: #3c5438;
                     position: absolute;
@@ -143,6 +131,21 @@ h4.ant-typography {
                 text-decoration: underline;
             }
 
+            .cityDocumentItem {
+                cursor: pointer;
+
+                .documentIcon {
+                    font-size: 60px;
+                }
+
+                .documentText {
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                    display: -webkit-box;
+                    -webkit-line-clamp: 3;
+                    -webkit-box-orient: vertical;
+                }
+            }
             .userName {
                 overflow: hidden;
                 text-overflow: ellipsis;
