Remove hidden link in documents for GoverningBody.

--- a/src/pages/GoverningBody/GoverningBody/GoverningBody.less
+++ b/src/pages/GoverningBody/GoverningBody/GoverningBody.less
@@ -113,18 +113,6 @@ h4.ant-typography {
                     color: #3c5438;
                 }
 
-                .documentIcon {
-                    font-size: 60px;
-                }
-
-                .documentText {
-                    overflow: hidden;
-                    text-overflow: ellipsis;
-                    display: -webkit-box;
-                    -webkit-line-clamp: 3;
-                    -webkit-box-orient: vertical;
-                }
-
                 .approveIcon {
                     color: #3c5438;
                     position: absolute;
@@ -141,6 +129,23 @@ h4.ant-typography {
 
             .governingBodyMemberItem :hover {
                 text-decoration: underline;
+            }
+
+            .governingBodyDocumentItem {
+                cursor: pointer;
+
+
+                .documentIcon {
+                    font-size: 60px;
+                }
+
+                .documentText {
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                    display: -webkit-box;
+                    -webkit-line-clamp: 3;
+                    -webkit-box-orient: vertical;
+                }
             }
 
             .userName {
