--- a/src/pages/Actions/ActionEvent/EventCreate/EventCreate.module.css
+++ b/src/pages/Actions/ActionEvent/EventCreate/EventCreate.module.css
@@ -44,7 +44,6 @@ form {
     display: flex;
     justify-content: space-between;
     margin: 0px 45px;
-    column-gap: 10px;
 }
 
 .select:hover,
@@ -56,10 +55,17 @@ input:hover,
 }
 
 .input {
-    width: 245px !important;
     text-align: start;
-}
 
+    padding: 5px 11px;
+    font-size: 17px;
+    width: 100% !important;
+    
+}
+.formItem{
+    display: block;
+    width: 100% !important;
+}
 
 .select {
     width: 245px !important;
@@ -74,21 +80,18 @@ input,
 [role="spinbutton"] {
     margin-left: -20px;
 }
-
 .button {
-    margin-top: 10px;
+    margin: 10px 20px;
     border: none;
     width: auto;
     height: 40px;
     outline: none;
     text-align: center;
     cursor: pointer;
-    margin-left: 7px;
-    margin-right: 0px;
     margin-bottom: 15px;
     box-shadow: 0 7px 14px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
-    float: right;
+    display: inline-table;
 }
 
 .button:hover {
@@ -100,8 +103,9 @@ input,
 }
 
 .radio {
+    width: 100%;
     justify-content: center;
-    display: flex;
+    display: block;
 }
 
 .title {
@@ -139,7 +143,8 @@ input,
     }
     .button {
         margin: auto;
-        display: block;
+        display: inline-block;
+        
     }
     .ant-radio-group {
         display: flex;
