Changed EditProfile page

--- a/src/pages/userPage/EditUserPage/EditUserPage.less
+++ b/src/pages/userPage/EditUserPage/EditUserPage.less
@@ -2,3 +2,15 @@
 {
     padding-left: 0px !important;
 }
+
+.buttons {
+    display: flex;
+    justify-content: center;
+    padding-top: 10px;
+}
+
+.buttons Button {
+    margin-right: 10px;
+    margin-left: 10px;
+    width: 200px;
+}
