--- a/src/pages/userPage/personalData/PersonalData.less
+++ b/src/pages/userPage/personalData/PersonalData.less
@@ -55,7 +55,7 @@
     margin-bottom: 10px;
 }
 
-.avatarWrapperf {
+.avatarWrapperUserFields {
     box-shadow: 0 7px 14px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
     width: 100% !important;
@@ -97,7 +97,7 @@
 }
 
 
-.avatarWrapperf:hover,
+.avatarWrapperUserFields:hover,
 .allFields:hover,
 .shortAllFields:hover{
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
@@ -162,7 +162,7 @@
         margin-left: auto;
         margin-bottom: 20px;
     }
-    .avatarWrapperf{
+    .avatarWrapperUserFields{
         width: 100% !important;
         padding-top: 20px;
         padding-bottom: 20px;
@@ -201,7 +201,7 @@
         margin-left: auto;
         margin-bottom: 20px;
     }
-    .avatarWrapperf{
+    .avatarWrapperUserFields{
         width: 100% !important;
         padding-top: 20px;
         padding-bottom: 20px;
@@ -236,7 +236,7 @@
         margin-left: auto;
         margin-bottom: 20px;
     }
-    .avatarWrapperf{
+    .avatarWrapperUserFields{
        width: 100% !important;
        padding-top: 20px;
        padding-bottom: 20px;
