Fixed bug with style on SecretariesPage

--- a/src/pages/userPage/Secretaries/Secretaries.less
+++ b/src/pages/userPage/Secretaries/Secretaries.less
@@ -1,15 +1,3 @@
-.avatarWrapper{
-    width:  calc(60% - 30px) !important;
-    height: auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin:0 40px 20px 0;
-    box-shadow: 0 7px 14px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-    transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
-}
-
 .kadraWrapper{
     height: 100%;
     width: 100%;
@@ -22,32 +10,92 @@
 
 .formContainer{
     display: flex;
+    justify-content: space-between;
     width: 100%;
 }
 
+.avatarWrapperSecretaries {
+    width: calc(45% - 30px) !important;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    box-shadow: 0 7px 14px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
+    padding-top: 20px;
+}
 
-.rowBlock{
+.allFieldsSecretaries {
+    width: calc(55% - 30px);
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 7px 14px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
+    padding: 10px;
+}
+
+
+.rowBlockSecretaries {
     display: flex;
     justify-content: space-around;
     width: 100%;
-    margin-bottom: 10px;
 }
 
+.avatarWrapperSecretaries:hover,
+.allFieldsSecretaries:hover{
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+}
+
+@media(max-width: 1330px) {
+    .avatarWrapperSecretaries {
+        width: 750px !important;
+        margin-right: auto;
+        margin-left: auto;
+        margin-bottom: 20px;
+    }
+    .allFieldsSecretaries {
+        width: 750px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        margin: auto !important;
+    }
+}
+
+@media(max-width: 900px) {
+    .avatarWrapperSecretaries {
+        width: 600px !important;
+        margin-right: auto;
+        margin-left: auto;
+        margin-bottom: 20px;
+    }
+    .allFieldsSecretaries {
+        width: 600px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        margin: auto !important;
+    }
+}
 
 @media(max-width: 768px){
-    .avatarWrapper{
+    .avatarWrapperSecretaries {
         width: 100% !important;
-        padding-top:5px;
-        padding-bottom: 5px;
+        margin-right: auto;
+        margin-left: auto;
+        margin-bottom: 20px;
     }
-    .allFields{
+    .allFieldsSecretaries {
         width: 100%;
-        padding: 5px;
+        padding-top: 10px;
+        padding-bottom: 10px;
     }
     .formItem{
         width: 100%;
     }
-    .rowBlock{
+    .rowBlockSecretaries {
         display: contents;
     }
     .formContainer{
