Fixed bug with short personal profile

--- a/src/pages/userPage/personalData/PersonalData.less
+++ b/src/pages/userPage/personalData/PersonalData.less
@@ -64,19 +64,32 @@
     margin-bottom: 20px;
 }
 
+.shortAvatarWrapperUserFields {
+    width: calc(45% - 30px) !important;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    box-shadow: 0 7px 14px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
+    padding-top: 20px;
+    margin-bottom: 20px;
+}
+
 .kadraWrapper{
     height: 100%;
     width: 100%;
     text-align: center;
 }
 
-.allFields{
+.allFields, .shortAllFields {
     width: calc(55% - 30px);
     height: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     box-shadow: 0 7px 14px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
     margin-bottom: 20px;
@@ -84,22 +97,10 @@
     padding-bottom: 10px;
 }
 
-.shortAllFields{
-    width: calc(55% - 30px);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: top !important;
-    padding-top: 10px;
-    margin-bottom: 20px;
-    box-shadow: 0 7px 14px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-    transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
-}
-
-
 .avatarWrapperUserFields:hover,
 .allFields:hover,
-.shortAllFields:hover{
+.shortAllFields:hover,
+.shortAvatarWrapperUserFields:hover {
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
@@ -156,13 +157,13 @@
     margin-bottom: 5px;
 }
 @media(max-width: 1330px) {
-    .wrapperContainer {
+    .wrapperContainer, .shortAvatarWrapperUserFields {
         width: 750px !important;
         margin-right: auto;
         margin-left: auto;
         margin-bottom: 20px;
     }
-    .avatarWrapperUserFields{
+    .avatarWrapperUserFields {
         width: 100% !important;
         padding-top: 20px;
         padding-bottom: 20px;
@@ -195,13 +196,13 @@
     }
  }
  @media(max-width: 1120px) {
-    .wrapperContainer {
+    .wrapperContainer, .shortAvatarWrapperUserFields {
         width: 600px !important;
         margin-right: auto;
         margin-left: auto;
         margin-bottom: 20px;
     }
-    .avatarWrapperUserFields{
+    .avatarWrapperUserFields, {
         width: 100% !important;
         padding-top: 20px;
         padding-bottom: 20px;
@@ -230,13 +231,13 @@
     }
  }
 @media(max-width: 768px) {
-    .wrapperContainer {
+    .wrapperContainer, .shortAvatarWrapperUserFields {
         width: 100% !important;
         margin-right: auto;
         margin-left: auto;
         margin-bottom: 20px;
     }
-    .avatarWrapperUserFields{
+    .avatarWrapperUserFields {
        width: 100% !important;
        padding-top: 20px;
        padding-bottom: 20px;
