--- a/src/pages/AnnualReport/AnnualReportTable/AnnualReportTable.less
+++ b/src/pages/AnnualReport/AnnualReportTable/AnnualReportTable.less
@@ -29,14 +29,22 @@
     cursor: pointer;
 }
 
-.TableHeader{
+.tableHeader{
+    flex-flow: row;
+}
+
+.tableHeader .ant-col{
+    margin: auto;
+}
+
+.tableHeaderSorting{
     display: inline-grid;
     vertical-align: middle;
     line-height: 1px;
     margin-left: 10px;
 }
 
-.TableHeader button{
+.tableHeaderSorting button{
     font-size: 10px;
     border: none;
     background: none;
