--- a/src/pages/Actions/ActionEvent/EventUser/EventUser.module.css
+++ b/src/pages/Actions/ActionEvent/EventUser/EventUser.module.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: space-between;
     width: 100%;
+    height: 100%;
 }
 
 .wrapperCol {
@@ -159,7 +160,7 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
-    padding-top: 20px;
+    justify-content: center;
 }
 
 .wrapper2:hover,
