--- a/src/pages/userPage/ActiveMembership/ActiveMembership.module.css
+++ b/src/pages/userPage/ActiveMembership/ActiveMembership.module.css
@@ -1,6 +1,7 @@
 .wrapper {
     display: flex;
     width: 100%;
+    height: 100%;
 }
 
 .wrapperCol {
@@ -44,6 +45,7 @@
     flex-direction: column;
     align-items: normal;
     text-align: center;
+    justify-content: center;
 }
 
 .wrapperGeneralInfo:hover,
@@ -62,6 +64,9 @@
 .wrapperGeneralInfo,
 .wrapperScrollDegree {
     margin: 0px 0px 20px 20px;
+    display: flex;
+    justify-content: center;
+
 }
 
 .avatarWrapper{
