--- a/src/pages/City/Cities/Cities.less
+++ b/src/pages/City/Cities/Cities.less
@@ -60,10 +60,17 @@
             text-align: center;
             font-size: 20px;
             font-weight: 700;
+            overflow-wrap: break-word;
         }
+
     }
           
     .pagination {
         text-align: center;
     }
 }
+
+.createFollowerTitleText{
+    white-space: pre-wrap;
+    margin-top: -8px;
+}    
