button is overlapped in minimized browser window #1441 + degree container changed

--- a/src/pages/Actions/ActionEvent/EventCalendar/EventCalendar.module.css
+++ b/src/pages/Actions/ActionEvent/EventCalendar/EventCalendar.module.css
@@ -40,7 +40,7 @@
     transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
 }
 
-.buttonCansel {
+.buttonCancel {
     width: auto;
     height: 40px;
     outline: none;
