--- a/src/pages/Actions/ActionEvent/EventUser/EventUser.module.css
+++ b/src/pages/Actions/ActionEvent/EventUser/EventUser.module.css
@@ -126,7 +126,7 @@
 }
 
 .button:hover,
-.buttonCansel:hover {
+.buttonCancel:hover {
     border: none;
     outline: none;
     box-shadow: 0 2px 0 rgba(0, 0, 0, 0.015);
@@ -134,7 +134,7 @@
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
-.buttonCansel {
+.buttonCancel {
     width: auto;
     margin-top: 10px;
     background: #3C5438;
