--- a/src/pages/userPage/ActiveMembership/PlastDegree/FormAddPlastDegree.module.css
+++ b/src/pages/userPage/ActiveMembership/PlastDegree/FormAddPlastDegree.module.css
@@ -5,24 +5,21 @@
     max-width: 320px;
   }
   
-  .selectField {
+  .selectField{
     float: center;
     text-align: center;
-    max-width: 470px;
-    min-width: 470px;
+    max-width: 100%;
+    width: 470px;
   }
   
-  
-  .formField {
+  .formField{
     width: 100%;
-   
   }
 
   .cardButton{
-
     float: center;
     margin-top: 7px;
     border-color: #3c5438;
-    max-width: 470px;
-    min-width: 470px;
+    max-width: 100%;
+    width: 470px;
   }
