--- a/src/pages/userPage/ActiveMembership/UserDates/ModalChangeUserDates.module.css
+++ b/src/pages/userPage/ActiveMembership/UserDates/ModalChangeUserDates.module.css
@@ -5,28 +5,26 @@
     max-width: 320px;
   }
   
-  .selectField {
+  .selectField{
     float: center;
     text-align: center;
-    max-width: 470px;
-    min-width: 470px;
+    max-width: 100%;
+    width: 470px;
   }
-  
-  
-  .formField {
+   
+  .formField{
     width: 100%;
    
   }
 
-  .formLabel {
-      font-size: 16px;
+  .formLabel{
+    font-size: 16px;
   }
 
   .cardButton{
-
     float: center;
     margin-top: 7px;
     border-color: #3c5438;
-    max-width: 470px;
-    min-width: 470px;
+    max-width: 100%;
+    width: 470px;
   }
