Fix unaligned error message

--- a/src/pages/GoverningBody/AddAdministratorModal/AddAdministrationModal.less
+++ b/src/pages/GoverningBody/AddAdministratorModal/AddAdministrationModal.less
@@ -20,6 +20,12 @@
   }
 }
 
+.formItemExplain {
+  max-width: 320px;
+  width: 100%;
+  float: right;
+}
+
 @media (max-width: 575px) {
   .addAdministrationModal {
     .cancelConfirmButtons {
