--- a/src/pages/Precaution/PrecautionTable/Table.module.css
+++ b/src/pages/Precaution/PrecautionTable/Table.module.css
@@ -1,13 +1,14 @@
-.titleTable {
+.titleTable{
     text-align: center;
     margin-bottom: 15px;
   }
-  /* Search container */
 
-  .searchContainer {
+  /* Search container */
+  .searchContainer{
     display: flex;
+    align-items: baseline;
     margin-bottom: 12px;
-    width: 700px;
+    width: 430px;
     margin-left: auto; 
   }
   .searchContainer>input{
@@ -30,16 +31,15 @@
     .searchContainer{
       width: 100%;
       flex-direction: column;
-      
     }
     .searchContainer>*{
       width: 100%;
       margin-bottom: 5px;
       margin-left: auto; 
     }
-
   }
-  .menu {
+
+  .menu{
     box-shadow: 0 4px 5px 3px rgba(0, 0, 0, 0.2) !important;
     position: absolute;
   }
@@ -48,4 +48,3 @@
     display:flex;
      justify-content:space-between
   }
-
