Adde active status sorting, archiving and unarchiving Regions, Cities, Clubs

--- a/src/pages/City/City/City.less
+++ b/src/pages/City/City/City.less
@@ -5,6 +5,25 @@ h4.ant-typography {
     color: #3c5438;
 }
 
+.status{
+    margin-right: -20px;
+    width: 220px;
+    margin-top: -15px;
+    float: right;
+    box-shadow: 0 0 0 3px, 0 0 0 2px inset;
+    border: 2px solid transparent;
+    border-radius: 4px;
+    display: inline-block;
+    padding: 5px 2px;
+    line-height: 22px;
+    font-size: 24px;
+    font-family: 'Black Ops One', cursive;
+    text-transform: uppercase;
+    text-align: center;
+    opacity: 0.4;
+    transform: rotate(9deg);
+}
+
 .cityProfile {
     .ant-card-body {
         padding-top: 10px;
