Fixed bugs (#1530, #1520, and one more about set first letter in city uppercased )

--- a/src/pages/userPage/Secretaries/Secretaries.less
+++ b/src/pages/userPage/Secretaries/Secretaries.less
@@ -38,7 +38,6 @@
     padding: 10px;
 }
 
-
 .rowBlockSecretaries {
     display: flex;
     justify-content: space-around;
@@ -104,4 +103,8 @@
     .mainContainer{
         padding: 10px;
     }
+}
+
+.ant-tabs-dropdown-menu-item{
+    color:white;
 }
