Resolved conflicts and code convention

--- a/src/pages/City/City/CheckActiveMembersForm.less
+++ b/src/pages/City/City/CheckActiveMembersForm.less
@@ -9,7 +9,7 @@
         text-decoration: underline;
     }
 
-    .cityName {
+    .name {
         text-align: center;
         align-items: center;
         -webkit-line-clamp: 1;
