--- a/src/pages/Club/Club/CheckActiveMembersForm.less
+++ b/src/pages/Club/Club/CheckActiveMembersForm.less
@@ -9,11 +9,10 @@
         text-decoration: underline;
     }
 
-    .cityName {
+    .name {
         text-align: center;
         align-items: center;
         -webkit-line-clamp: 1;
-
     }
 }
 
