--- a/src/pages/Regions/CheckActiveCitiesForm.less
+++ b/src/pages/Regions/CheckActiveCitiesForm.less
@@ -10,11 +10,10 @@
         text-decoration: underline;
     }
 
-    .cityName {
+    .name {
         text-align: center;
         align-items: center;
         -webkit-line-clamp: 1;
-
     }
 }
 
